welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:8: error: '(' expected but identifier found.
	if baggle <=2
           ^Poucet:10: error: '(' expected but identifier found.
	if baggle >=3
           ^